
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-878] Stay buttons now action-specific, done through Ext state rather than PHP
- Redo logic order of modPackageBuilder::buildLexicon to ensure languages are packaged in before topics
- [#MODX-1647] Added width specification to force width of screen to prevent scrolling off of RTE TVs
- Cleaned up tvTitle Form Customization rule by moving code from JS to PHP
- Fixed z-index issue for windows due to IE fix
- [#MODX-732] Added z-index force to topmenu for IE, fixed rightlogin div on topbar for IE
- [#MODX-1641] Optimized and cleaned code dealing with Form Customization TV visibility and default values
- [#MODX-1658] Fixed bug where placing a menu item in a submenu would place it in top level
- [#MODX-1624] Enabled changing of text field in menu items
- [#MODX-1656], [#MODX-1654] Fixed CSS gap in install summary in setup
- [#MODX-1655] Fixed hardcoded lexicon strings in setup
- [#MODX-1621] Remove unnecessary context menu items from items in Resource Group Resources tree
- [#MODX-1627] Fixed incorrect menu in resource group tree resources when newly dragged
- [#MODX-1599] Added manager_date_format system setting for customizing date formats for the manager
- [#MODX-1651] Increasing width of setup navbar buttons to accommodate translations
- [#MODX-1649] Fixed bug where Quick Create didn't respect default_template setting
- [#MODX-1650] Fixed bug with language specification in setup to properly set cookie for Windows machines, and set initial language properly
- [#MODX-1626] Fixed bug where top menus could not have actions
- [#MODX-1494] Fixed issue where some settings dont have descriptions, and cleaned up deprecated settings