@@ -2,6 +2,9 @@
 /**
  * @package setup
  */
+$default_folder_permissions = sprintf("%04o", 0777 & (0777 - umask()));
+$default_file_permissions = sprintf("%04o", 0666 & (0666 - umask()));
+
 if (!empty($_POST['proceed'])) {
     unset($_POST['proceed']);
     $_POST['installmode'] = isset ($_POST['installmode']) ? intval($_POST['installmode']) : modInstall::MODE_NEW;
@@ -18,10 +21,10 @@ $this->parser->assign('installmode',$install->getInstallMode());
 
 $files_exist= 0;
 if (file_exists(MODX_INSTALL_PATH . 'manager/index.php') &&
-	file_exists(MODX_INSTALL_PATH . 'index.php') &&
-	file_exists(MODX_INSTALL_PATH . 'connectors/index.php')
+    file_exists(MODX_INSTALL_PATH . 'index.php') &&
+    file_exists(MODX_INSTALL_PATH . 'connectors/index.php')
 ) {
-	$files_exist = !in_array(MODX_SETUP_KEY, array('@advanced', '@sdk')) ? 1 : 0;
+    $files_exist = !in_array(MODX_SETUP_KEY, array('@advanced', '@sdk')) ? 1 : 0;
 }
 
 $manifest= 0;
@@ -41,5 +44,7 @@ $this->parser->assign('safe_mode', ($safe_mode ? 1 : 0));
 $this->parser->assign('files_exist', $files_exist);
 $this->parser->assign('manifest', $manifest);
 $this->parser->assign('unpacked', $unpacked);
+$this->parser->assign('default_folder_permissions', $default_folder_permissions);
+$this->parser->assign('default_file_permissions', $default_file_permissions);
 
 return $this->parser->fetch('options.tpl');
