@@ -17,6 +17,9 @@ $_lang['config_file_err_w'] = 'Error writing config file.';
 $_lang['config_file_perms_notset'] = 'Config file permissions were not updated. You may want to change the permissions on your config file to secure the file from tampering.';
 $_lang['config_file_perms_set'] = 'Config file permissions successfully updated.';
 $_lang['config_file_written'] = 'Config file successfully written.';
+$_lang['config_key'] = 'MODX_CONFIG_KEY';
+$_lang['config_key_override'] = 'If you wish to run setup on a MODX_CONFIG_KEY other than the one currently specified in your setup/includes/config.core.php, specify it below.';
+$_lang['config_not_writable_err'] = 'You have attempted to change a setting in setup/includes/config.core.php but the file is not writable. Make the file writable or edit the file manually before continuing.';
 $_lang['connection_character_set'] = 'Connection character set:';
 $_lang['connection_collation'] = 'Collation:';
 $_lang['connection_connection_and_login_information'] = 'Database connection and login information';
@@ -148,6 +151,10 @@ $_lang['options_install_new_copy'] = 'Install a new copy of ';
 $_lang['options_install_new_note'] = 'Please note this option may overwrite any data inside your database.';
 $_lang['options_important_upgrade'] = 'Important Upgrade Note';
 $_lang['options_important_upgrade_note'] = 'Make sure all Manager users <strong>log out before upgrading</strong> to prevent problems (e.g., not being able to access resources). If you have trouble after upgrading, log out of any Manager sessions, clear your browser cache, then log in again.';
+$_lang['options_new_file_permissions'] = 'New file permissions';
+$_lang['options_new_file_permissions_note'] = 'You can override the permissions new files created via MODx will use, e.g. 0664 or 0666.';
+$_lang['options_new_folder_permissions'] = 'New file permissions';
+$_lang['options_new_folder_permissions_note'] = 'You can override the permissions new folders created via MODx will use, e.g. 0775 or 0777.';
 $_lang['options_new_installation'] = 'New Installation';
 $_lang['options_title'] = 'Install Options';
 $_lang['options_upgrade_advanced'] = 'Advanced Upgrade Install<br /><small>(edit database config)</small>';
