@@ -4,6 +4,11 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-rc-1 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-18] Allow editing of MODX_CONFIG_KEY in setup welcome view
+- [#MODX-18] Prompt user for MODX_CORE_PATH if not found at beginning of setup
+- [#MODX-760], [#MODX-1080], [#MODX-1528] Added setup option to set new_file_permissions and new_folder_permissions in welcome view
+- [#MODX-760], [#MODX-1528] Removed new_file_permissions and new_folder_permissions system settings from setup
+- [#MODX-760], [#MODX-1528] Updated xPDO 2.0 to revision 407: new file and folder permissions determined from umask()
 - [#MODX-878] Stay buttons now action-specific, done through Ext state rather than PHP
 - Redo logic order of modPackageBuilder::buildLexicon to ensure languages are packaged in before topics
 - [#MODX-1647] Added width specification to force width of screen to prevent scrolling off of RTE TVs
